out/old/manifests/dap/Service.dap.yaml
metadata:
  name: dap
  namespace: dap
  labels:
    app.kubernetes.io/instance: dap
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dap
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: dap-0.1.0
  annotations: {}
spec:
  ports:
  - name: fe
    protocol: TCP
    port: 4200
    targetPort: 4200
  - name: be
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: dap
    app.kubernetes.io/name: dap
  clusterIP: <IP_57>
  type: ClusterIP
  externalIPs:
  - <CLEANUP_IP_5>
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
